# disclone

./: .gitignore  README.md  config.json  pyproject.toml  rclone.conf  requirements.txt
src/: __init__.py  config.py  main.py
src/cogs/: copy.py  remotes.py
src/cogs/developer/: purge.py
src/cogs/developer_tools/: purge.py
src/cogs/utilities/: copy.py  remotes.py
src/exceptions/: __init__.py
src/templates/: bot.py
src/utils/: __init__.py  embeds.py  general.py  helpers.py  processes.py
