[tool.poetry]
name = "disclone"
version = "1.0.0"
description = "Disclone is a bot with Rclone integration, Google Drive automation and Gclone support."
authors = ["Tarran Prior <Tarranprior@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
disnake = "^2.5.1"
loguru = "^0.6.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
